testsuite/gsksl/errors/local-redeclaration-of-local-variable.glsl
void main()
{
  int x;
  int x;
}
